--- a/doc/memoria.tex
+++ b/doc/memoria.tex
@@ -77,7 +77,7 @@
 \input{4_Analisis}
 
 \bibliographystyle{ieeetr}
-\bibliography{bibliography/images,bibliography/bibliography}
+\bibliography{bibliography/images,bibliography/bibliography,bibliography/web}
 
 
 \end{document}
