avanze doc memoria

--- a/doc/4_Analisis.tex
+++ b/doc/4_Analisis.tex
@@ -51,11 +51,11 @@ En este experimento se realizó el ajuste considerando los promedios diarios y u
 \begin{figure}[ht!]
     \centering
         \subfigure[Buen ajuste PSO Valparaíso 2013.]{
-            \label{fig:pso_valpo_13}
+            \label{fig:pso_valpo_15_14_13}
             \includegraphics[width=0.4\textwidth]{figures/result_13-14-15.png}
         }%
         \subfigure[Mal ajuste PSO Valparaíso 2013.]{
-            \label{fig:pso_valpo_13}
+            \label{fig:pso_valpo_15_14_13_lq}
             \includegraphics[width=0.4\textwidth]{figures/result_13-14-15_low_quality.png}
         }%
     \caption{Ajuste con PSO a datos Valparaíso 2015, 2014 y 2013, baja y buena calidad. Fuente: Elaboración Propia.}
