--- a/doc/code/pso_code.tex
+++ b/doc/code/pso_code.tex
@@ -1,5 +1,5 @@
 %!TEX root = main.tex
-
+\begin{algorithm}[h!]
 \caption{PSO para el ajuste de los parámetros de la distribución de Weibull}
 \label{alg:pso}
 \begin{algorithmic}
@@ -18,3 +18,4 @@
 \ENDFOR
 \STATE retornarMejorResultadoGlobal(enjambre).
 \end{algorithmic}
+\end{algorithm}
